--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,4 +1,17 @@
+
+
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --font1:  Verdana, Geneva, Tahoma, sans-serif;
+    --font2:  'Passion One', cursive;
+    --font3:  'Sriracha', cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -7,6 +20,7 @@
 html, body{
     min-height: 100vh;
     background-color: rgba(169, 169, 169, 0.436);
+    font-family: var(--font1);
 }
 
 header{
@@ -18,6 +32,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 7vw;
 }
 
 header > p{
@@ -28,7 +44,9 @@ section{
     line-height: 2em;
     padding-top: 10vh;
     padding-bottom: 10vh;
-    padding-left: 30px;
+    padding-left: 40px;
+    font-family: var(--font3);
+    font-size: 2vw;
 }
 
 section.normal{
@@ -44,7 +62,8 @@ section.image{
 
 section.image > p{
     background-color: rgba(0, 0, 0, 0.327);
-    width: 400px;
+    display: inline-block;
+    padding: 10px;
 }
 
 a, footer a{
