--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -19,7 +19,7 @@
 
 html, body{
     min-height: 100vh;
-    background-color: rgba(169, 169, 169, 0.436);
+    background-color: #3fa4a26f;
     font-family: var(--font1);
 }
 
@@ -47,6 +47,12 @@ section{
     padding-left: 40px;
     font-family: var(--font3);
     font-size: 2vw;
+    text-shadow: 1.5px 1.5px 0px rgba(0, 0, 0, 0.486);
+}
+
+section > p{
+    padding-bottom: 2em;
+
 }
 
 section.normal{
@@ -58,12 +64,27 @@ section.normal{
 section.image{
     background-color: rgba(8, 3, 3, 0.816);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.632);
+    background-attachment: fixed;
 }
 
 section.image > p{
     background-color: rgba(0, 0, 0, 0.327);
     display: inline-block;
     padding: 10px;
+    text-shadow: 1.5px 1.5px 0px black;
+}
+
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-position: right, center;
+    background-size: cover;
+
+}
+section#img02{
+    background-image: url(../imagens/background002.jpg);
+    background-size: cover;
+    
 }
 
 a, footer a{
